--- a/resultados/eda-reclamacoes.Rmd
+++ b/resultados/eda-reclamacoes.Rmd
@@ -57,9 +57,7 @@ reclamacoes %>%
        x = "Órgão fereral",
        y = "Comprimento da reclamação")
 ```
-
-[Conclusão da visualização]
-
+Como podemos ver no gráfico acima, o ANAC teve reclamações com número maior de caracteres e também com um nível maior de insatisfação. Já o INSS, teve uma maior homogeniedade de caracteres, só uma reclamação passou dos 1000 caracteres e com nota 5 insatisfação. A partir dessas conclusões podemos ver que reclamações que tiveram maior número de caracteres tambḿe teve  maior  número  de grau de insatisfação.
 
 Uma forma comum de se demostrar insatisfação por meio da escrita digital é adicionar pontos de exclamação e letras maiúsculas. 
 
@@ -118,8 +116,7 @@ avaliacao_humana %>%
 
 Como vemos, o desvio padrão das avaliações ficou muito baixo, o que mostra uma homogeneidade nos dados. Com isso, podemos concluir que as pessoas classificaram a reclamação com o mesmo grau de instatisfação.
 
-Além disso, podemos também responder outra pergunta acerca dos dados: os classificadores humanos foram, de forma geral, inviesados a avaliarem uma reclamação como mais ou menos insatisfeita. Como o desvio padrão foi baixo, podemos inferir que os classificadores humanos concordam entre si, mostrando que não houveram pessoas, pelo menos não de maneira expressiva, que classificasse uma reclamação num maior ou menor nível de satisfação. 
-
+Além disso, podemos também responder outra pergunta acerca dos dados.
 #### Dessa maneira, podemos dizer que pessoas que receberam a mesma reclamação classificaram igualmente?
 
 ```{r, warning=FALSE, message=FALSE}
@@ -139,6 +136,7 @@ distribuicao_avaliacao <- function(filtro) {
 }
 ```
 
+Os classificadores humanos foram, de forma geral, inviesados a avaliarem uma reclamação como mais ou menos insatisfeita. Como o desvio padrão foi baixo, podemos inferir que os classificadores humanos concordam entre si, mostrando que não houveram pessoas, pelo menos não de maneira expressiva, que classificasse uma reclamação num maior ou menor nível de satisfação. 
 
 ```{r, warning=FALSE, message=FALSE}
 distribuicao_avaliacao(1:15)
